# vda5050-analysis-tool

./: Cargo.toml  deny.toml
hmi/: Cargo.toml  Dioxus.toml  deny.toml
vda5050-data-types/: Cargo.toml
vda5050-data-types/src/: common.rs  connection.rs  factsheet.rs  instant_actions.rs  lib.rs  order.rs  state.rs  visualization.rs
